# clasma

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: borrow_attr.rs  field_access.rs  lib.rs
tests/: examples.rs  test.rs
